made minor changes to the contact section, aligning the contactItems properly in the center by setting the margin and padding to 0, along with changing the phantom text in the contact form to be more universal and helpful. I also fixed the mobile adaptiveness of the coding certificate in the resume section.

--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -19,6 +19,8 @@
   flex-direction: row;
   justify-content: space-around;
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .ContactItems li {
