--- a/src/pages/Resume.css
+++ b/src/pages/Resume.css
@@ -15,4 +15,7 @@
     .resume-image {
       width: 100%;
     }
+    .certificate-image {
+      width: 100%;
+    }
   }
